# otus_homework_01

./: CMakeLists.txt  README.md  gtest_version.cpp
.github/workflows/: release.yml
auto_tuple/: CMakeLists.txt  auto1.cpp  auto2.cpp  tuple1.cpp  tuple2.cpp
helloworld/: CMakeLists.txt  gtest_version.cpp  main.cpp
ip_filter/: CMakeLists.txt  gtest_ipaddr.cpp  ip_filter.cpp  ipaddr.cpp  ipaddr.h
ip_filter_d/: gtest_ipaddr.cpp
otus_homework_01/: CMakeLists.txt  lib.cpp
otus_homework_01/helloworld/: CMakeLists.txt  lib.cpp
otus_homework_01/ip_filter/: CMakeLists.txt
